# dds

./: .cache_ggshield  .gitignore  .vercelignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  diagnose.sh  package-lock.json  package.json  test-api.sh  test-simple-server.sh  test_db.rs  vercel-build.sh  vercel.json
.github/workflows/: rust.yml
.sqlx/: query-0b939bcc438db0ca52556c717cfc6b9a3593d2fa2dcf99b0ff9bff213ee94345.json  query-699aa9fdf2ab8afec6e93613f0e626cbf04ed61f06d1cd4fe28803175f95f428.json
api/: graphql.rs  index.sh
data/json/: sample.json
migrations/: 20240101000000_create_users.sql  20240320000000_create_etl_tables.sql  20250430195918_create_json_data.sql  20250430195919_create_etl_models.sql  20250430195920_enable_rls.sql
public/: index.html
scripts/: run.sh  setup_test_db.sh
src/: auth.rs  etl.rs  lib.rs  logging.rs  main.rs  simple_server.rs
src/db/: mod.rs  user_repository_test.rs
src/graphql/: mod.rs
src/models/: etl.rs  mod.rs  per_user.rs  user.rs
