[package]
name = "dds"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dds"
path = "src/main.rs"

[[bin]]
name = "test_db"
path = "test_db.rs"

[[bin]]
name = "graphql"
path = "api/graphql.rs"

[dependencies]
async-graphql = "7.0.16"
async-graphql-axum = "7.0.16"
async-stream = "0.3"
axum = "0.8.4" # Ensure a single version is used
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0.98"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
vercel_runtime = "1.0.0"

[lib]
name = "dds"
path = "src/lib.rs"
