[package]
name = "dds"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "graphql"
path = "api/graphql.rs"

[[bin]]
name = "dds"
path = "src/main.rs"

[[bin]]
name = "test_db"
path = "test_db.rs"

[[bin]]
name = "simple_server"
path = "src/simple_server.rs"

[dependencies]
async-graphql = "7.0.16"
async-graphql-axum = "7.0.16"
async-stream = "0.3"
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0.98"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "8.3"
oauth2 = "4.4"
async-trait = "0.1"
axum-extra = { version = "0.8", features = ["cookie"] }

[lib]
name = "dds"
path = "src/lib.rs"
